tf_modules/internal/stateful/prod/security_groups.tf
// Defining SG rules
resource "aws_security_group" "app_sg" {
  name        = var.regional_name
  description = "Security Group for Application"
  vpc_id      = data.aws_lb.global_mcp_apps_load_balancer.vpc_id

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = data.aws_lb.global_mcp_apps_load_balancer.security_groups
  }

  dynamic "ingress" {
    for_each = var.create_obs_ingress_rule ? { create_obs_ingress_rule = var.create_obs_ingress_rule } : {}

    content {
      from_port       = 9100
      to_port         = 9100
      protocol        = "tcp"
      security_groups = ["sg-0c9bf5ebccc63b7ff"]
    }
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }

  tags = var.tags
}
